电子书管理页面前后端页面整合

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.username=wiki
 spring.datasource.password=260010
 # 配置mybatis所有Mapper.xml所在的路径
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
+
+# 修改数据日志级别
+logging.level.com.xiaoxiaoning.demo.mapper=trace
