--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,15 @@
             <version>1.2.70</version>
         </dependency>
 
+
+
+        <!-- pagehelper 插件-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.13</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
