封装分页请求与返回参数

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.username=wiki
 spring.datasource.password=260010
 # 配置mybatis所有Mapper.xml所在的路径
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
+
+logging.level.mapper=trace;
